# tauri-plugin-web_auth

./: Cargo.toml  LICENSE  README.md  package.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: WebAuthPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: WebAuthPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
