[package]
name = "tauri-plugin-web-auth"
version = "0.1.0"
description = "Leverage iOS' ASWebAuthenticationSession and Android's Custom Tabs to authenticate users in your Tauri app."
license = "MIT"
authors = [ "Manaf941" ]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-web-auth"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
